# mimalloc-rs

./: Cargo.toml  Readme.md
src/: init.rs  internal.rs  lib.rs  options.rs  os.rs  segment.rs  stats.rs  types.rs
